# libaprs

./: .gitignore  CLAUDE.md  Makefile.am  README.md  autogen.sh  configure.ac  libaprs.pc.in
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  libaprs-dev.install  libaprs0.install  rules
examples/: Makefile.am  aprs_decode.c  aprs_sdr.c  aprs_tx  aprs_tx.c  build_position.c  gen_test_wavs  gen_test_wavs.c  kiss_bridge.c  level_sweep.sh  parse_packet.c
include/: Makefile.am
include/libaprs/: aprs.h  aprsis.h  ax25.h  error.h  kiss.h  modem.h  station.h  transport.h  types.h  version.h  wav.h
src/: Makefile.am  aprs.c  aprsis.c  ax25.c  error.c  kiss.c  modem.c  station.c  transport.c  wav.c
tests/: Makefile.am  test_aprs.c  test_aprsis.c  test_ax25.c  test_kiss.c  test_main.c  test_modem.c  test_station.c  test_transport.c
